fix: fix stretch mode of #dropdown #autocomplete #date-picker #input and #textarea when parent is flex box as well

--- a/packages/dnb-ui-lib/src/components/autocomplete/style/_autocomplete.scss
+++ b/packages/dnb-ui-lib/src/components/autocomplete/style/_autocomplete.scss
@@ -158,6 +158,7 @@
   // make full width
   &--stretch {
     display: flex;
+    flex-grow: 1;
   }
   &--stretch & {
     &__inner {
