--- a/packages/dnb-ui-lib/src/components/textarea/style/_textarea.scss
+++ b/packages/dnb-ui-lib/src/components/textarea/style/_textarea.scss
@@ -131,6 +131,7 @@
   // make full width
   &--stretch {
     display: flex;
+    flex-grow: 1;
   }
   &--stretch & {
     &__inner {
